# discord-summary-helper

./: .env.example  .gitignore  LICENSE  README.md  SKILL.md  config.example.json  discord_cli.py  pyproject.toml  test_discord_cli.py
skills/discord-summary-helper/: SKILL.md
state/: channel_status.example.json  last_runs.example.json
